export enum PaymentStatus {
  Signal = 'SIGNAL',
  Full = 'FULL'
}
