classDiagram
    class Tenant {
        +id: string
        +name: string
        +description?: string
        +status: boolean
        +createdAt: string
        +roles?: Role[]
    }

    class Role {
        +id: string
        +name: string
        +description?: string
    }

    class User {
        +id: string
        +name: string
        +email: string
        +phone?: string
        +createdAt: string
        +roles: Role[]
        +tenantIds?: string[]
    }

    class Space {
        +id: string
        +name: string
        +description: string
        +capacity: number
        +price: number
        +coverImageUrl?: string
        +checkInTime: string
        +checkOutTime: string
        +signalPercentage: number
        +tenantId?: string
        +createdAt: string
    }

    class Reservation {
        +id: string
        +userId: string
        +spaceId: string
        +reservationDate: string
        +paymentId?: string
        +createdAt: string
        +updatedAt: string
    }

    class Payment {
        +id: string
        +totalAmount: number
        +payed: number
        +status: PaymentStatus
        +paidAt: string
        +createdAt: string
    }

    class PaymentStatus {
        <<enumeration>>
        SIGNAL
        FULL
    }

    Reservation --> User : userId
    Reservation --> Space : spaceId
    Reservation --> Payment : paymentId
    Payment --> PaymentStatus
    User --> Role : roles
    User --> Tenant : tenantIds
    Space --> Tenant : tenantId
    Tenant --> Role : roles
